kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bar
  name: bar  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      # Do not change the image manually. The pipeline will change this using Kustomize
      - image: bar@sha256:your-image-digest
        imagePullPolicy: Always
        name: bar
        resources:
          limits:
            memory: 768Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 11

      imagePullSecrets:
        - name: artifact-registry
