kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-ingress
spec:
  defaultBackend:
     service:
      name: bar-service
      port:
        number: 8080
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar-service
            port:
              number: 8080
